fix:segment overlap and end bound overflow

--- a/src/styles/content/components/_form.scss
+++ b/src/styles/content/components/_form.scss
@@ -1,6 +1,10 @@
 @use "../base/variables" as var;
 // [🎨 UI/UX]: remove hover states when form is disabled
 
+##{var.$prefix}form-global-error:empty {
+  height: 0;
+}
+
 .#{var.$prefix}form {
   --_#{var.$prefix}form-px: var(--#{var.$prefix}spacing-16);
   --_#{var.$prefix}form-py: var(--#{var.$prefix}spacing-16);
